test/valid/59809_swapping_vars/swapping_vars.mag
-- Author: 59809, Manuel Leitão

fun main (_) : Unit -> Unit =
    var a : Int = 10;
    var b : Int = 25;
    var temp : Int = a;
    a = b;
    b = temp;
    print(a)