test/invalid-syntax/57551_function_call_missing_argument/function_call_missing_argument.mag
-- Author: 57551, Eduardo Proença

-- Function call missing the second argument

fun add (a, b) : (Int, Int) -> Int = a + b
fun main (_) : Unit -> Unit = print(add(1,))